deployments/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-crud-api-nodeport
spec:
  type: NodePort
  selector:
    app: go-crud-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30000
