deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-crud-api
spec:
  type: ClusterIP
  selector:
    app: go-crud-api
  ports:
    - port: 80
      targetPort: 80
